# srlinux_evpn_vxlan

./: .gitignore  .lab.clab.yaml.bak  config.yaml  lab.clab.yaml  pyproject.toml
yang_srlab/: __init__.py  compute.py  idempotency.py  metamodel.py  yang.py
yang_srlab/compute/: __init__.py  compute.py  container.py  template_scanner.py
yang_srlab/dataclass/: __init__.py  interface.py  routing.py
yang_srlab/templates/: __init__.py  common.py  common_all.py  dci.py  leaf.py  spine.py
yang_srlab/yang_model/: __init__.py  interface.py  srlinux.py  templates.py
yang_srlab/yang_templates/: __init__.py
yang_srlab/yang_templates/srlinux/: __init__.py  aa_base.py  aa_mgmt.py  ab_base.py  ab_layer2.py  ac_layer1.py  ac_layer3.py  ad_layer2.py  base.py  zz_finalization.py
